        - Add and style registration link to fit in login area,
          change navbar size and input fields, improve positionings of
          logo and icons, fix animation of navbar when scrolling on
          small devices. (uyen-nhu)
        - Return cursor position for query object (fixes #228; diewald)
        - Keep plugin state in statemanager (fixes #201; diewald)

0.58 2024-11-15
        - Cookie path is settable now (hebasta)
        - Fix meta table view for key value pairs (diewald)
        - Fix warning on OAuth public clients (diewald)
        - Introduce navi->list helper (diewald)
        - Guided tour link changed from ID to class (hebasta)
        - Add border to query panel widgets (fixes #225; diewald)
        - Add 'desc' support to embedded widgets
          (fixes #224; diewald)
        - Support setting of query form elements via plugins (diewald)
        - Fix h1-logo (only visible in header; diewald)
        - Added translations for CQL (r-wilm)
        - Partial support for romanian (irimia) and hungarian
          (pfischer) localizations

0.57 2024-10-08
        - Support VCs via URL without queries (diewald)
        - Added translations for regexp and FCSQL (r-wilm)
        - Introduce 'ui-ready' global event (diewald)
        - Don't show random page option for single page
          results (diewald)
        - Move page to top after click on example queries (diewald)
        - Disable sidebar via stash (diewald)
        - Change malt/d for relation default in tour (kupietz)
        - Use 'pubDate eq 2018' as VC example in tour (kupietz)
        - Fix tour when started from a non-root path (hebasta)

0.56 2024-09-23
        - Improve slim test for plugin support
          (korapxml2...; diewald)
        - Fix layerInfo retrieval for relation view. (diewald)
        - Change look of addon logo. (diewald)

0.55 2024-07-03
        - Removed deprecated doc_link_to helper. (diewald)